--- a/MapBuilder/MapBuilder.vcxproj
+++ b/MapBuilder/MapBuilder.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClCompile Include="files_images.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="map_loader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="max.txt" />
@@ -150,12 +151,17 @@
     <Image Include="Image_Sprites\Top_Down_Zombie_Game_Sprites\Terrain\wood_default.png" />
     <Image Include="Image_Sprites\Ui_Sprites\Create_Map.png" />
     <Image Include="Image_Sprites\Ui_Sprites\Create_Map_Page_Error.png" />
+    <Image Include="Image_Sprites\Ui_Sprites\File_Load_Dropdown.png" />
     <Image Include="Image_Sprites\Ui_Sprites\Help_Page.png" />
+    <Image Include="Image_Sprites\Ui_Sprites\Load_Map_Ui_Top_Bar.png" />
     <Image Include="Image_Sprites\Ui_Sprites\Main_Page.png" />
+    <Image Include="Image_Sprites\Ui_Sprites\OpeningLoad.png" />
+    <Image Include="Image_Sprites\Ui_Sprites\Save_And_Exit.png" />
     <Image Include="Image_Sprites\Ui_Sprites\Top_Bar_Ui_Selector.png" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="files_images.h" />
+    <ClInclude Include="map.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="Fonts\opensans_non_italic.ttf" />
