--- a/MapBuilder/MapBuilder.vcxproj
+++ b/MapBuilder/MapBuilder.vcxproj
@@ -175,6 +175,10 @@
   <ItemGroup>
     <Font Include="Fonts\opensans_non_italic.ttf" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shader.frag" />
+    <None Include="shader.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
